--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ Flask-SQLAlchemy==0.16
 Jinja2==2.6
 SQLAlchemy==0.7.9
 Werkzeug==0.8.3
-distribute==0.6.28
-gunicorn==0.14.6
-wsgiref==0.1.2
+#distribute
+#gunicorn
+#wsgiref==0.1.2
 psycopg2
 ipython
