--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,6 @@ Flask-SQLAlchemy==0.16
 Jinja2==2.6
 SQLAlchemy==0.7.9
 Werkzeug==0.8.3
-#distribute
-#gunicorn
-#wsgiref==0.1.2
-psycopg2
-ipython
+ipython==2.1.0
+psycopg2==2.5.3
+wsgiref==0.1.2
