--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
-Flask==0.9
-Flask-SQLAlchemy==0.16
-Jinja2==2.6
-SQLAlchemy==0.7.9
-Werkzeug==0.8.3
-ipython==2.1.0
-psycopg2==2.5.3
-wsgiref==0.1.2
+backcall==0.2.0
+Flask==2.0.1
+Flask-SQLAlchemy==2.1
+greenlet==1.1.0
+ipython==7.24.1
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mypy-extensions==0.4.3
+parso==0.8.2
+pathspec==0.8.1
+pexpect==4.8.0
+psycopg2-binary==2.8.6
+ptyprocess==0.7.0
+Pygments==2.9.0
+SQLAlchemy==1.3.24
+traitlets==5.0.5
+wcwidth==0.2.5
+Werkzeug==2.0.1
